style(html): change border placement on contact page

--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,8 @@ featured_image: /images/brand-logotype.jpg
         </div>
     
     <div class="about-section unit unit-s-1 unit-m-2-3 unit-h-3-4">
-        <div class="preview-wrapper border-bottom">
-            <section id="portfolio-intro">
+        <div class="preview-wrapper">
+            <section id="portfolio-intro" class="border-bottom">
                 <h2 id="h2">About</h2>
                 <p>I’m a young adult at the age of 24 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new design endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working in those fields. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
             </section>
