fix(html): fix links on home page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ PORTFOLIO PREVIEW SECTION
 <div class="preview-wrapper clearfix">
     <div class="grid previews-home">
         <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
-            <a href="{{site.baseurl}}/typography/">
+            <a href="{{site.baseurl}}/print/">
                 <img src="{{site.baseurl}}/images/preview-typography.jpg" alt="Typography">
                 <figcaption>
                     <h5>Typography</h5>
@@ -69,7 +69,7 @@ PORTFOLIO PREVIEW SECTION
         </figure>
     
         <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
-            <a href="{{site.baseurl}}/interactive">
+            <a href="{{site.baseurl}}/web-design">
                 <img src="{{site.baseurl}}/images/preview-interactive.jpg" alt="Interactive">
                 <figcaption>
                     <h5>Interactive</h5>
@@ -78,7 +78,7 @@ PORTFOLIO PREVIEW SECTION
         </figure>
     
         <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
-            <a href="{{site.baseurl}}/motion">
+            <a href="{{site.baseurl}}/motion-design">
                 <img src="{{site.baseurl}}/images/preview-motion.jpg" alt="Motion">
                 <figcaption>
                     <h5>Motion</h5>
