feat(html): add pedal power project

--- a/identity/index.html
+++ b/identity/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Illustration
-meta: My style of illustrations provide a mix of flat graphics such as the poster for Company and the Senators Campaign. As well as other styles that are a bit more fluid using strokes and subtle gradients.
-featured_image: /images/preview-illustration.jpg
+title: Identity
+meta: These are a few projects I have done over the years that show my ability to design logos and create vector graphics starting from initial sketches on paper.
+featured_image: /images/brand-logotype.jpg
 ---
 
 <section>
@@ -15,7 +15,7 @@ featured_image: /images/preview-illustration.jpg
 
 <div class="push-top-double push-bottom-double">
     <div class="preview-wrapper">
-        <h1>Brand Identity Design</h1>
-        <p>My style of illustrations provide a mix of flat graphics such as the poster for Company and the Senators Campaign. As well as other styles that are a bit more fluid using strokes and subtle gradients. I also enjoy coming with the initial design I will illustrate on paper and in one sample illustration I show how the final rendering was based off the rendered ink drawings.</p>
+        <h1>Identity Design</h1>
+        <p>These are a few projects I have done over the years that show my ability to design logos and create vector graphics starting from initial sketches on paper.</p>
     </div>
 </div>
