--- a/illustration/index.html
+++ b/illustration/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Illustration
 meta: My style of illustrations provide a mix of flat graphics such as the poster for Company and the Senators Campaign. As well as other styles that are a bit more fluid using strokes and subtle gradients.
-featured_image: /images/preview-illustration.jpg
+featured_image: /images/brand-logotype.jpg
 ---
 
 <section>
