--- a/motion-design/index.html
+++ b/motion-design/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Motion
+title: Motion Design
 meta: This is a showcase of some of the motion design pieces I have developed during my time in College.
-featured_image: /images/preview-motion.jpg
+featured_image: /images/brand-logotype.jpg
 ---
 
 <section>
