--- a/print/index.html
+++ b/print/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Typography
+title: Print
 meta: These projects will show you a taste of the typographic practice I use within my designs.
-featured_image: /images/preview-typography.jpg
+featured_image: /images/brand-logotype.jpg
 ---
 
 <section>
