--- a/web-design/index.html
+++ b/web-design/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Interactive
+title: Web Design
 meta: This page features some of the different interactive projects I have created at Algonquin College.
-featured_image: /images/preview-interactive.jpg
+featured_image: /images/brand-logotype.jpg
 ---
 
 <section>
