add(all): finish creating pedal power project

--- a/identity/pedal-power.html
+++ b/identity/pedal-power.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Pedal Power
-meta: Designing this brochure for Bridgehead was a extensive project. Bridgehead is a fair trade coffeehouse chain based in Ottawa, Canada. 
+meta: This logo was a re-design of the original pedal power logo. A lot of exploration was made before obtaining the final result. 
 featured_image: /images/typography/bridgehead-cover.jpg
 ---
 
@@ -17,22 +17,22 @@ featured_image: /images/typography/bridgehead-cover.jpg
     <div class="push-top-double push-bottom-double align-center">
         <h1>Pedal Power – Bikes and Boards</h1>
         <div id="columns">
-            <p>Designing this brochure for Bridgehead was a extensive project. Bridgehead is a fair trade coffeehouse chain based in Ottawa, Canada. They pride themselves on brewing fresh organic coffee. This brochure mock-up was done for practice and the layouts presented are created for experimentation and concept and are not out commercially on the market.</p>
+            <p>This logo was a re-design of the original pedal power logo. A lot of exploration was made before obtaining the final result. The process began on paper first through many iterations of the various logos, then moved into more refinement. Once the final sketch was selected it was then rendered in black and white in Illustrator. After that, colour was added to cmplete the logo.</p>
         </div>
     </div>
     
-    <button id="open-bridgehead-popup">
+    <button id="open-pedal-power-popup">
         <img src="{{site.baseurl}}/images/photo-icon.svg" alt="Open Image Gallery">
         <p>View Gallery</p>
     </button>
 
     <div id="project-wrapper" class="grid">
         <div class="unit unit-s-1 unit-m-1 unit-l-1">
-            <img src="{{site.baseurl}}/images/identity/pedal-power-1.svg">
+            <img src="{{site.baseurl}}/images/identity/pedal-power-1.gif">
         </div>
         
         <div class="unit unit-s-1 unit-m-1 unit-l-1">
-            <img src="{{site.baseurl}}/images/identity/pedal-power-2.svg">
+            <img src="{{site.baseurl}}/images/identity/pedal-power-2.gif">
         </div>
     </div>
 </div>
