feat(all): add distinctive audio logo project

--- a/identity/personality-genie.html
+++ b/identity/personality-genie.html
@@ -17,7 +17,7 @@ featured_image: /images/typography/bridgehead-cover.jpg
     <div class="push-top-double push-bottom-double align-center">
         <h1>Personality Genie</h1>
         <div id="columns">
-            <p>This logo was a re-design of the original Personality Genie logo. A lot of exploration was made before obtaining the final result. The process began on paper first through many iterations of the various logos, then moved into more refinement. Once the final sketch was selected it was then rendered in black and white in Illustrator. After that, colour was added to cmplete the logo.</p>
+            <p>This logo was a re-design of the original Personality Genie logo. A lot of exploration was made before obtaining the final result. The process began on paper first through many iterations of the various logos, then moved into more refinement. Once the final sketch was selected it was then rendered in black and white in Illustrator. After that, colour was added to complete the logo.</p>
         </div>
     </div>
     
