style(all): make general one colour banner for all pages

--- a/identity/distinctive-audio.html
+++ b/identity/distinctive-audio.html
@@ -6,7 +6,7 @@ featured_image: /images/typography/bridgehead-cover.jpg
 ---
 
 <section>
-    <figure class="banner bridgehead">
+    <figure class="banner">
         <figcaption id="tab">
             <h2>Identity</h2>
         </figcaption>
