--- a/print/index.html
+++ b/print/index.html
@@ -6,7 +6,7 @@ featured_image: /images/brand-logotype.jpg
 ---
 
 <section>
-    <figure class="banner typo">
+    <figure class="banner">
         <figcaption id="tab"><h2>Typography</h2></figcaption>
     </figure>
 </section>
