--- a/web-design/galactic-adventures.html
+++ b/web-design/galactic-adventures.html
@@ -6,9 +6,9 @@ featured_image: /images/interactive/galactic-adventures-cover.jpg
 ---
 
 <section>
-    <figure class="banner galactic-adventures">
+    <figure class="banner">
         <figcaption id="tab">
-            <h2>Interactive</h2>
+            <h2>Web Design</h2>
         </figcaption>
     </figure>
 </section>
