--- a/web-design/good-to-talk-app.html
+++ b/web-design/good-to-talk-app.html
@@ -6,9 +6,9 @@ featured_image: /images/interactive/good-to-talk-cover.jpg
 ---
 
 <section>
-    <figure class="banner good-to-talk-app">
+    <figure class="banner">
         <figcaption id="tab">
-            <h2>Interactive</h2>
+            <h2>Web Design</h2>
         </figcaption>
     </figure>
 </section>
