--- a/illustration/index.html
+++ b/illustration/index.html
@@ -6,7 +6,7 @@ featured_image: /images/brand-logotype.jpg
 ---
 
 <section>
-    <figure class="banner illustration">
+    <figure class="banner">
         <figcaption id="tab"><h2>Illustration</h2></figcaption>
     </figure>
 </section>
