--- a/motion-design/building-a-portfolio.html
+++ b/motion-design/building-a-portfolio.html
@@ -6,7 +6,7 @@ featured_image: /images/motion/building-a-portfolio-cover.jpg
 ---
 
 <section>
-    <figure class="banner building-a-portfolio">
+    <figure class="banner">
         <figcaption id="tab">
             <h2>Motion</h2>
         </figcaption>
