--- a/motion-design/index.html
+++ b/motion-design/index.html
@@ -6,7 +6,7 @@ featured_image: /images/brand-logotype.jpg
 ---
 
 <section>
-    <figure class="banner motion">
+    <figure class="banner">
         <figcaption id="tab"><h2>Motion</h2></figcaption>
     </figure>
 </section>
