--- a/motion-design/tennis-infographic.html
+++ b/motion-design/tennis-infographic.html
@@ -6,7 +6,7 @@ featured_image: /images/motion/tennis-infographic-cover.jpg
 ---
 
 <section>
-    <figure class="banner tennis-infographic">
+    <figure class="banner">
         <figcaption id="tab">
             <h2>Motion</h2>
         </figcaption>
