--- a/web-design/index.html
+++ b/web-design/index.html
@@ -6,8 +6,8 @@ featured_image: /images/brand-logotype.jpg
 ---
 
 <section>
-    <figure class="banner interactive">
-        <figcaption id="tab"><h2>Interactive</h2></figcaption>
+    <figure class="banner">
+        <figcaption id="tab"><h2>Web Design</h2></figcaption>
     </figure>
 </section>
 
@@ -15,7 +15,7 @@ featured_image: /images/brand-logotype.jpg
 
 <div class="push-top-double push-bottom-double">
     <div class="preview-wrapper">
-        <h1>Interactive Design</h1>
+        <h1>Web Design</h1>
         <p>During my time at Algonquin College I have created some interesting interactive projects.</p>
         <p>One project included building an interactive dvd main menu, another involved building a website mockup in Photoshop for an ecommerce website. Other projects even involved designing a toy for a very young demographic with the focus on developing an intuitive and simple user experience. We also created a mockup for an ipad game where we considered how the user would interact with the interface. More recent projects involved the creation of two iphone apps.</p>
     </div>
