--- a/web-design/palisar.html
+++ b/web-design/palisar.html
@@ -6,9 +6,9 @@ featured_image: /images/interactive/palisar-cover.jpg
 ---
 
 <section>
-    <figure class="banner palisar">
+    <figure class="banner">
         <figcaption id="tab">
-            <h2>Interactive</h2>
+            <h2>Web Design</h2>
         </figcaption>
     </figure>
 </section>
