feat(all): add alliance for the great lakes project

--- a/print/index.html
+++ b/print/index.html
@@ -7,7 +7,7 @@ featured_image: /images/brand-logotype.jpg
 
 <section>
     <figure class="banner">
-        <figcaption id="tab"><h2>Typography</h2></figcaption>
+        <figcaption id="tab"><h2>Print</h2></figcaption>
     </figure>
 </section>
 
@@ -15,7 +15,7 @@ featured_image: /images/brand-logotype.jpg
 
 <div class="push-top-double push-bottom-double">
     <div class="preview-wrapper">
-        <h1>Typographic Design</h1>
+        <h1>Print Design</h1>
         <p>These projects will show you a taste of the typographic practice I use within my designs.</p>
         <p>I align the contents of the articles and spreads in a grid system. Then I arrange the layout of the spreads in a way that is pleasing to look at, engaging to read, and legible. With some layouts I have been a bit experimental and have moved certain elements outside of the established grid system, while keeping esthetical pleasing spacing and vertical rhythm in mind.</p>
     </div>
