feat(all): add alliance for the great lakes web project

--- a/web-design/nobile-rackets.html
+++ b/web-design/nobile-rackets.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Palisar Nobile Rackets Mock-up
+title: Nobile Rackets Website Mock-up
 meta: This was a mock-up created for a fictitious website called Nobile Rackets.
 featured_image: /images/interactive/palisar-cover.jpg
 ---
