feat(all): add fast company project

--- a/print/bridgehead.html
+++ b/print/bridgehead.html
@@ -8,8 +8,7 @@ featured_image: /images/typography/bridgehead-cover.jpg
 <section>
     <figure class="banner">
         <figcaption id="tab">
-            <h2>Typography</h2>
-        </figcaption>
+            <h2>Print</h2>
     </figure>
 </section>
 
