--- a/print/cirque-du-soleil.html
+++ b/print/cirque-du-soleil.html
@@ -8,7 +8,7 @@ featured_image: /images/typography/bridgehead-cover.jpg
 <section>
     <figure class="banner">
         <figcaption id="tab">
-            <h2>Typography</h2>
+            <h2>Print</h2>
         </figcaption>
     </figure>
 </section>
@@ -17,7 +17,7 @@ featured_image: /images/typography/bridgehead-cover.jpg
     <div class="push-top-double push-bottom-double align-center">
         <h1>Cirque Du Soleil</h1>
         <div id="columns">
-            <p>This is an anual report designed for Cirque du Soleil. The mood of the piece is conveying a bright and colourful atmosphere that reflects the lively perfomances of Cirque du Soleil. The design for this anual report was made in College and was not distributed publically</p>
+            <p>This is an anual report designed for Cirque du Soleil. The mood of the piece is conveying a bright and colourful atmosphere that reflects the lively perfomances of Cirque du Soleil. The design for this anual report was made in College and was not distributed publically.</p>
         </div>
     </div>
     
