--- a/print/go-with-the-flow.html
+++ b/print/go-with-the-flow.html
@@ -8,7 +8,7 @@ featured_image: /images/typography/go-with-the-flow-cover.jpg
 <section>
     <figure class="banner">
         <figcaption id="tab">
-            <h2>Typography</h2>
+            <h2>Print</h2>
         </figcaption>
     </figure>
 </section>
