--- a/print/rocking-horse.html
+++ b/print/rocking-horse.html
@@ -9,7 +9,7 @@ featured_image: /images/typography/obsessed-with-speed-cover.jpg
 <section>
     <figure class="banner">
         <figcaption id="tab">
-            <h2>Typography</h2>
+            <h2>Print</h2>
         </figcaption>
     </figure>
 </section>
